--- a/global.css
+++ b/global.css
@@ -576,9 +576,10 @@ nav li {
     -moz-box-shadow: none;
     background: none;
     box-shadow: none;
-    padding: 0;
-    margin-top: 20px;
+    clear: both;
     height: auto;
+    float: left;
+    padding-left: 215px;
     width: auto;
   }
 
